# parsing_vacancies

./: README.md  pyproject.toml
src/: functions.py  jsonsaver.py  main.py  vacancies.json  vacancy.py  working_api.py
